--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Jose Sanchez\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1807787150.properties
+deploy.ant.properties.file=C:\\Users\\fabia\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-303870209.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Jose Sanchez/personalDomain
-j2ee.server.home=C:/Program Files/glassfish5/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish5\\glassfish;C:\\Users\\Jose Sanchez\\personalDomain]deployer:gfv3ee6wc:localhost:18213
-j2ee.server.middleware=C:/Program Files/glassfish5
-user.properties.file=C:\\Users\\Jose Sanchez\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+j2ee.server.domain=C:/servidoresJava/glassfish4/glassfish/domains/domain1
+j2ee.server.home=C:/servidoresJava/glassfish4/glassfish
+j2ee.server.instance=[C:\\servidoresJava\\glassfish4\\glassfish;C:\\servidoresJava\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/servidoresJava/glassfish4
+selected.browser=Chrome
+user.properties.file=C:\\Users\\fabia\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
